// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
<<<<<<< HEAD
      \\"cdktfstack_wingapp_mybucket_5FF05DA9\\": {}
=======
      \\"root_mybucket_E5DAA363\\": {
        \\"bucket_prefix\\": \\"my-bucket-c8045fcc-\\"
      }
>>>>>>> main
    },
    \\"aws_s3_bucket_policy\\": {
      \\"cdktfstack_wingapp_mybucket_PublicPolicy_676AE553\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Principal\\\\\\":\\\\\\"*\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.arn}/*\\\\\\"]}]}\\"
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_mybucket_Encryption_FCC8D840\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
<<<<<<< HEAD
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.14.1",
=======
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
>>>>>>> main
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "aws": Object {
                "constructInfo": Object {
<<<<<<< HEAD
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "11.0.4",
=======
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
>>>>>>> main
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
<<<<<<< HEAD
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "11.0.4",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/my_bucket/Default",
                  },
                  "Encryption": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                      "version": "11.0.4",
                    },
                    "id": "Encryption",
                    "path": "cdktf-stack/wing-app/my_bucket/Encryption",
                  },
                  "PublicPolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketPolicy.S3BucketPolicy",
                      "version": "11.0.4",
                    },
                    "id": "PublicPolicy",
                    "path": "cdktf-stack/wing-app/my_bucket/PublicPolicy",
                  },
=======
              "Encryption": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                  "version": "12.0.1",
                },
                "id": "Encryption",
                "path": "root/my_bucket/Encryption",
              },
              "PublicPolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketPolicy.S3BucketPolicy",
                  "version": "12.0.1",
>>>>>>> main
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.0.25",
                },
                "id": "my_bucket",
                "path": "cdktf-stack/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
<<<<<<< HEAD
          "version": "0.14.1",
=======
          "version": "0.15.0",
>>>>>>> main
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
<<<<<<< HEAD
      "version": "0.14.1",
=======
      "version": "0.15.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix must be lowercase 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"root_TheUncannyBucket_9FBBB2ED\\": {
        \\"bucket_prefix\\": \\"the-uncanny-bucket-c88a0953-\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_TheUncannyBucket_PublicAccessBlock_FCE6031A\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_TheUncannyBucket_9FBBB2ED.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_TheUncannyBucket_Encryption_E43D3F83\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TheUncannyBucket_9FBBB2ED.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`bucket prefix must be lowercase 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "The-Uncanny.Bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
                },
                "id": "Default",
                "path": "root/The-Uncanny.Bucket/Default",
              },
              "Encryption": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                  "version": "12.0.1",
                },
                "id": "Encryption",
                "path": "root/The-Uncanny.Bucket/Encryption",
              },
              "PublicAccessBlock": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                  "version": "12.0.1",
                },
                "id": "PublicAccessBlock",
                "path": "root/The-Uncanny.Bucket/PublicAccessBlock",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "The-Uncanny.Bucket",
            "path": "root/The-Uncanny.Bucket",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"root_theuncannybucket_03A74E00\\": {
        \\"bucket_prefix\\": \\"the-uncanny-bucket-c8e2755c-\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_theuncannybucket_PublicAccessBlock_976A73D7\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_theuncannybucket_03A74E00.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_theuncannybucket_Encryption_1294028A\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_theuncannybucket_03A74E00.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`bucket prefix valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "the-uncanny.bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
                },
                "id": "Default",
                "path": "root/the-uncanny.bucket/Default",
              },
              "Encryption": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                  "version": "12.0.1",
                },
                "id": "Encryption",
                "path": "root/the-uncanny.bucket/Encryption",
              },
              "PublicAccessBlock": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                  "version": "12.0.1",
                },
                "id": "PublicAccessBlock",
                "path": "root/the-uncanny.bucket/PublicAccessBlock",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "the-uncanny.bucket",
            "path": "root/the-uncanny.bucket",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.0",
>>>>>>> main
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
<<<<<<< HEAD
      \\"cdktfstack_wingapp_mybucket_5FF05DA9\\": {}
=======
      \\"root_mybucket_E5DAA363\\": {
        \\"bucket_prefix\\": \\"my-bucket-c8045fcc-\\"
      }
>>>>>>> main
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"cdktfstack_wingapp_mybucket_PublicAccessBlock_2B2E0E5F\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_mybucket_Encryption_FCC8D840\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
<<<<<<< HEAD
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.14.1",
=======
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
>>>>>>> main
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "aws": Object {
                "constructInfo": Object {
<<<<<<< HEAD
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "11.0.4",
=======
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
>>>>>>> main
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
<<<<<<< HEAD
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "11.0.4",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/my_bucket/Default",
                  },
                  "Encryption": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                      "version": "11.0.4",
                    },
                    "id": "Encryption",
                    "path": "cdktf-stack/wing-app/my_bucket/Encryption",
                  },
                  "PublicAccessBlock": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                      "version": "11.0.4",
                    },
                    "id": "PublicAccessBlock",
                    "path": "cdktf-stack/wing-app/my_bucket/PublicAccessBlock",
                  },
=======
              "Encryption": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                  "version": "12.0.1",
                },
                "id": "Encryption",
                "path": "root/my_bucket/Encryption",
              },
              "PublicAccessBlock": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                  "version": "12.0.1",
>>>>>>> main
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.0.25",
                },
                "id": "my_bucket",
                "path": "cdktf-stack/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
<<<<<<< HEAD
          "version": "0.14.1",
=======
          "version": "0.15.0",
>>>>>>> main
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
<<<<<<< HEAD
      "version": "0.14.1",
=======
      "version": "0.15.0",
>>>>>>> main
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
